# ptpy-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml  publish.yml
ptpyrs/: __init__.py  __main__.py
src/: args.rs  lib.rs  shell.rs
