# maturin develop
[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "ptpyrs"
classifiers = []
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
ptpyrs = "ptpyrs.__main__:ptpyrs.main"

[tool.maturin]
exclude = ["src/*", "Cargo.toml", "Cargo.lock"]
features = ["pyo3/extension-module"]